infra/k8s/ingress/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: rb6art.com
      http:
        paths:
          - path: /api/user/?(.*)
            backend:
              serviceName: auth-clusterip-service
              servicePort: 3000
          - path: /api/posts/?(.*)
            backend:
              serviceName: posts-clusterip-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-clusterip-service
              servicePort: 3000
